[package]
name = "typack_napi"
version = "0.1.0"
edition = "2024"
description = "N-API bindings for typack"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2.1.5"

[dependencies]
napi = "3.4.0"
napi-derive = "3.2.1"
typack = { path = "..", features = ["cli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
